0.85
Changes: 
- fixed multiplier to handle the different modes better.
- 

0.84
Changes:
- fixed bug in source file handling in ELF symbol loader
- fixed RSSI-ready flag to be set in CC2420
- refactored code from Sky/ESB into GenericNode
- fixed workaround for AWT/IO read line hang bug. (works but not nice in
  cygwin). Workaround is off by default by can be configured in CLI.
- added several new commands (start, stop, step, print, printreg, etc).
- fixed bug in USART - TX Interrupt implemented
- changed API for interruptServiced to include which vector that was serviced
- changed when interruptServiced is called - now before servicing the interrupt
  instead of after (RETI).

0.83
Changes:
- added support for external flash on Sky node (M25P80)
- added symbolic name in disassembler
- fixed timer interrupt bug causing problem with TinyOS firmwares
- implemented virtual time and event system based on that time.
- improved emulation of CC2420
- implemented writer monitors (CPUMonitor - monitor of writes on any address)
- added commands and command (line) handler
- added plug-in system

0.82 - JFreechart, operation mode statistics (2008-02-03)
Changes:
- added jfreechart diagrams for stack and operation mode statistics
- added profiling of operation modes (e.g. chip modes such as on/off/lpm)
- fixed bug in Timer causing division by zero when main clock is slower than ACLK.
- added possibility to print a stack trace when CPU is stopped
- more symbol information available after loading ELF files

0.81 - ELF Stabs, source debugging (2007-12-07)
Changes:
- support for ELF debug information (stab section)
- possible to convert address into linenumber and file
- simple source-level viewer that shows current execution position
  (and updates during single stepping) - with highlighting for C.
- support for LPM/CPUOFF which stops instruction emulation when in
  LPM modes
- refactored profiling into separate classes

0.8  - Initial release (2007-11-26)